src/objects/XO_Usage__c.object
<CustomObject>
    <fields>
        <fullName>Action_Performed__c</fullName>
        <description>This field will be used to determine what action was performed to create this record.</description>
        <label>Action Performed</label>
        <picklist>
            <picklistValues>
                <fullName>Page Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record Update(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record Insert(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record Delete(s)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>This field will be used to show an additional information about the action - such as what records updated, deleted, inserted, search filters used, etc</description>
        <label>Additional Information</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initiated_From__c</fullName>
        <description>This field is used to determine what the Usage record is being initiated from - this will generally be the &quot;method&quot; or &quot;function&quot; that is creating this record.</description>
        <label>Initiated From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>This field is used to determine the Source or Origination of the Usage - generally this will be the Page or Component that spawn the record.</description>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>XO Usage</label>
    <listViews>
        <fullName>All_2</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Action_Performed__c</columns>
        <columns>Additional_Information__c</columns>
        <columns>Initiated_From__c</columns>
        <columns>Source__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All 2</label>
    </listViews>
    <nameField>
        <label>XO Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XO Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>